...
                                                    <rect key="frame" x="112" y="73" width="16" height="11"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="11" id="O3i-nK-2E8"/>
                                                        <constraint firstAttribute="width" constant="16" id="Piw-hg-tgv"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Hide details" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Six-
                                                    <rect key="frame" x="20" y="73" width="84" height="16"/>
                                                    <fontDescription key="fontDescription" name="Regular-Bold" family="Regular" pointSize="16"/>
                                                    <color key="textColor" name="energyBlue"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ejS-jB-Mbu">
...
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="30" id="Atw-VO-R0e"/>
                                                        <constraint firstAttribute="width" constant="105" id="hvK-Oy-OiJ"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="Regular-SemiBold" family="Regular" pointSize="16"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" title="More info">
                                                        <color key="titleColor" name="softBlack"/>
                                                    </state>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                            <real key="value" value="1"/>
                                                        </userDefinedRuntimeAttribute>
...
                                                <constraint firstItem="hE0-Ng-ImG" firstAttribute="top" secondItem="Six-lO-3JQ" secondAttribute="top" id="pQx-cW-ceT"/>
                                                <constraint firstItem="hnW-Zl-9cE" firstAttribute="top" secondItem="KJl-mp-cH7" secondAttribute="bottom" constant="10" id="rnG-DH-cZd"/>
                                                <constraint firstItem="ejS-jB-Mbu" firstAttribute="top" secondItem="hnW-Zl-9cE" secondAttribute="bottom" priority="250" constant="15" id="ubD-po-w5n"/>
                                                <constraint firstItem="k8o-O4-omT" firstAttribute="leading" secondItem="Six-lO-3JQ" secondAttribute="leading" id="wRz-gG-eCA"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="MoreInfoBPH"/>
                                        <connections>
                                            <outlet property="buttonViewDetails" destination="k8o-O4-omT" id="d5L-3P-LNo"/>
                                            <outlet property="failed_Message_View" destination="doK-cA-VmD" id="x3C-6O-rit"/>
                                            <outlet property="label_FailMessage" destination="rQC-pu-g8e" id="F6q-KP-5go"/>
                                            <outlet property="label_MonthYear" destination="efD-Q9-VOV" id="K75-RJ-Apg"/>
                                            <outlet property="label_Type" destination="KJl-mp-cH7" id="jri-JJ-Fst"/>
...
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="90A-p0-IQN">
                                <rect key="frame" x="0.0" y="587" width="375" height="80"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzn-D6-wU4">
                                        <rect key="frame" x="167.5" y="10" width="40" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="HistoryCrossBtn"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="qeD-sM-6WG"/>
                                            <constraint firstAttribute="height" constant="40" id="rH6-8L-l6t"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" image="closeImage"/>
...
