...
                                <rect key="frame" x="20" y="577" width="335" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wco-nK-iOj" customClass="RoundedButton" customModule="CustSupportApp" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
                                        <fontDescription key="fontDescription" name="Regular-SemiBold" family="Regular" pointSize="18"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Enter card manually">
                                            <color key="titleColor" name="softBlack"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                                <integer key="value" value="2"/>
                                            </userDefinedRuntimeAttribute>
...
                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="2yh-mT-meC">
                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="62"/>
                                                        <subviews>
                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LAt-xa-Wai">
                                                                <rect key="frame" x="0.0" y="0.0" width="335" height="62"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name on card" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vAz-G1-iMd" customClass="FloatLabelTextField" customModule="CustSupportApp" customModuleProv
                                                                        <rect key="frame" x="20" y="0.0" width="313" height="62"/>
                                                                        <color key="textColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                        <fontDescription key="fontDescription" name="Regular-Medium" family="Regular" pointSize="18"/>
                                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" textContentType="name"/>
                                                                        <userDefinedRuntimeAttributes>
                                                                            <userDefinedRuntimeAttribute type="color" keyPath="titleTextColour">
...
                                                                        <rect key="frame" x="10" y="17" width="40" height="28"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="width" constant="40" id="vJe-wX-J4I"/>
                                                                            <constraint firstAttribute="height" constant="28" id="w3H-te-Obr"/>
                                                                        </constraints>
                                                                    </imageView>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Card number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2em-iJ-cJK" customClass="FloatLabelTextField" customModule="CustSupportApp" customModuleProvi
                                                                        <rect key="frame" x="60" y="0.0" width="273" height="62"/>
                                                                        <color key="textColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                        <fontDescription key="fontDescription" name="Regular-Medium" family="Regular" pointSize="18"/>
                                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" returnKeyType="next"/>
                                                                        <userDefinedRuntimeAttributes>
                                                                            <userDefinedRuntimeAttribute type="color" keyPath="titleTextColour">
...
                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Zdk-Cg-LIb">
                                                        <rect key="frame" x="0.0" y="154" width="335" height="62"/>
                                                        <subviews>
                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZh-0v-xMy">
                                                                <rect key="frame" x="0.0" y="0.0" width="220" height="62"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Expiration (MM/YY)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GA8-FE-5PZ" customClass="FloatLabelTextField" customModule="CustSupportApp" customModu
                                                                        <rect key="frame" x="20" y="0.0" width="198" height="62"/>
                                                                        <color key="textColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                        <fontDescription key="fontDescription" name="Regular-Medium" family="Regular" pointSize="18"/>
                                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" returnKeyType="done"/>
                                                                        <userDefinedRuntimeAttributes>
                                                                            <userDefinedRuntimeAttribute type="color" keyPath="titleTextColour">
...
